--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 		<description.html><![CDATA[<a target="${javadoc.target}" href="https://semanticcms.com/news/">SemanticCMS newsfeeds</a> in a Servlet environment.]]></description.html>
 		<!-- SonarQube -->
 		<sonar.projectKey>${project.groupId}:${project.artifactId}</sonar.projectKey>
-		<sonar.organization>aoindustries</sonar.organization>
+		<sonar.organization>ao-apps</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 		<!-- TODO: Implement tests -->
 		<sonar.coverage.exclusions>**.*</sonar.coverage.exclusions>
@@ -75,20 +75,20 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 	</developers>
 
 	<scm>
-		<connection>scm:git:git://github.com/aoindustries/semanticcms-news-servlet.git</connection>
-		<developerConnection>scm:git:git@github.com:aoindustries/semanticcms-news-servlet.git</developerConnection>
-		<url>https://github.com/aoindustries/semanticcms-news-servlet</url>
+		<connection>scm:git:git://github.com/ao-apps/semanticcms-news-servlet.git</connection>
+		<developerConnection>scm:git:git@github.com:ao-apps/semanticcms-news-servlet.git</developerConnection>
+		<url>https://github.com/ao-apps/semanticcms-news-servlet</url>
 		<tag>HEAD</tag>
 	</scm>
 
 	<issueManagement>
 		<system>GitHub Issues</system>
-		<url>https://github.com/aoindustries/semanticcms-news-servlet/issues</url>
+		<url>https://github.com/ao-apps/semanticcms-news-servlet/issues</url>
 	</issueManagement>
 
 	<ciManagement>
 		<system>GitHub Actions</system>
-		<url>https://github.com/aoindustries/semanticcms-news-servlet/actions</url>
+		<url>https://github.com/ao-apps/semanticcms-news-servlet/actions</url>
 	</ciManagement>
 
 	<repositories>
