--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,9 @@ along with semanticcms-news-servlet.  If not, see <https://www.gnu.org/licenses/
 			<releases>
 				<enabled>false</enabled>
 			</releases>
+			<snapshots>
+				<checksumPolicy>fail</checksumPolicy>
+			</snapshots>
 		</repository>
 	</repositories>
 
